--- a/example.env
+++ b/example.env
@@ -4,12 +4,12 @@ BOT_TOKEN= Bot Token
 BOT_NAME=UFO Music
 API_ID= #Your API ID
 API_HASH= #Your HASH
-BG_IMAGE=https://telegra.ph/file/7618711bbdb9f03ed989e.jpg
-THUMB_IMG=https://telegra.ph/file/7618711bbdb9f03ed989e.jpg
-SUDO_USERS=1757169682 1670523611 1727937540 # List of user IDs separated by space
+BG_IMAGE=https://telegra.ph/file/b2d621f8ab77f3525e322.jpg
+THUMB_IMG=https://telegra.ph/file/b2d621f8ab77f3525e322.jpg
+SUDO_USERS=1924528742 # List of user IDs separated by space
 DURATION_LIMIT=40 # in minutes (default: 7)
 UPDATES_CHANNEL=xV00V
-GROUP_SUPPORT=xv00v
+GROUP_SUPPORT=help_levi
 ASSISTANT_NAME=Ufo asns
-OWNER_NAME=xU99U
+OWNER_NAME=oobbbo
 PMPERMIT=ENABLE
